--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     </head>
     <body>
         <h1>Odins Recipes</h1>
+        <ul>
+            <li><a href="../recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="../recipes/cereal.html">Cereal</a></li>
+            <li><a href="../recipes/mangolassi.html">Mango Lassi</a></li>
+        </ul>
     </body>
 </html>
